# bobs-screensaver

./: AUTHORS  ChangeLog  README  README.md  configure  configure.ac
doc/: README  README.compiling  README.xscreensaver
src/: Makefile.am  Makefile.in  bobs.c  bobs.h  bobs_bouncefx.c  bobs_burstfx.c  bobs_fountainfx.c  bobs_multiplyfx.c  bobs_rainfx.c  bobs_random.c  bobs_spinburstfx.c  bobs_textures.c  bobs_timers.c  bobs_wobblefx.c
src/gnome/: Makefile.am  Makefile.in  bobs.desktop
src/kde/: Makefile.am  Makefile.in  bobs.desktop
src/textures/: Makefile.am  Makefile.in
xscreensaver/: bobs.conf  bobs.xml
